--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebAR-Prueba Portal.loader.js";
+      var loaderUrl = buildUrl + "/FrameItBeta.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebAR-Prueba Portal.data",
-        frameworkUrl: buildUrl + "/WebAR-Prueba Portal.framework.js",
-        codeUrl: buildUrl + "/WebAR-Prueba Portal.wasm",
+        dataUrl: buildUrl + "/FrameItBeta.data",
+        frameworkUrl: buildUrl + "/FrameItBeta.framework.js",
+        codeUrl: buildUrl + "/FrameItBeta.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Prueba Portal",
